parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> block
Rule 3     block -> blocklist
Rule 4     blocklist -> command blockterminator blocklist
Rule 5     blocklist -> empty
Rule 6     blockterminator -> empty
Rule 7     blockterminator -> SEMICOLON
Rule 8     command -> ID ASSIGN exp
Rule 9     command -> functioncall
Rule 10    command -> vardeclaration
Rule 11    command -> localdeclaration
Rule 12    command -> functiondeclaration
Rule 13    command -> varassignmultiple
Rule 14    command -> WHILE exp DO block END
Rule 15    command -> IF exp THEN block elsestnt END
Rule 16    command -> RETURN explist
Rule 17    expassign -> ASSIGN exp
Rule 18    expassign -> empty
Rule 19    localdeclaration -> LOCAL ID expassign
Rule 20    varassignmultiple -> LOCAL ID COMMA ID ASSIGN functioncall
Rule 21    vardeclaration -> VAR ID expassign
Rule 22    functiondeclaration -> LOCAL FUNCTION ID LPAREN paramlist RPAREN block END
Rule 23    functioncall -> ID LPAREN explist RPAREN
Rule 24    paramlist -> empty
Rule 25    paramlist -> paramseq
Rule 26    paramseq -> ID
Rule 27    paramseq -> ID COMMA paramseq
Rule 28    explist -> empty
Rule 29    explist -> exp
Rule 30    explist -> exp COMMA explist
Rule 31    exp -> NUMBER
Rule 32    exp -> ID
Rule 33    exp -> STRING
Rule 34    exp -> functioncall
Rule 35    exp -> exp PLUS exp
Rule 36    exp -> exp MINUS exp
Rule 37    exp -> exp TIMES exp
Rule 38    exp -> exp DIVIDE exp
Rule 39    exp -> exp MOD exp
Rule 40    exp -> exp AND exp
Rule 41    exp -> exp OR exp
Rule 42    exp -> exp LESS exp
Rule 43    exp -> exp LESSEQUAL exp
Rule 44    exp -> exp GREATER exp
Rule 45    exp -> exp GREATEREQUAL exp
Rule 46    exp -> exp EQUAL exp
Rule 47    exp -> exp NOTEQUAL exp
Rule 48    exp -> exp CONCAT exp
Rule 49    exp -> NOT exp
Rule 50    exp -> MINUS exp
Rule 51    elsestnt -> empty
Rule 52    elsestnt -> ELSE block

Terminals, with rules where they appear

AND                  : 40
ASSIGN               : 8 17 20
COMMA                : 20 27 30
CONCAT               : 48
DIVIDE               : 38
DO                   : 14
ELSE                 : 52
END                  : 14 15 22
EQUAL                : 46
FUNCTION             : 22
GREATER              : 44
GREATEREQUAL         : 45
ID                   : 8 19 20 20 21 22 23 26 27 32
IF                   : 15
LESS                 : 42
LESSEQUAL            : 43
LOCAL                : 19 20 22
LPAREN               : 22 23
MINUS                : 36 50
MOD                  : 39
NOT                  : 49
NOTEQUAL             : 47
NUMBER               : 31
OR                   : 41
PLUS                 : 35
RETURN               : 16
RPAREN               : 22 23
SEMICOLON            : 7
STRING               : 33
THEN                 : 15
TIMES                : 37
VAR                  : 21
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

block                : 2 14 15 22 52
blocklist            : 3 4
blockterminator      : 4
command              : 4
elsestnt             : 15
empty                : 5 6 18 24 28 51
exp                  : 8 14 15 17 29 30 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 50
expassign            : 19 21
explist              : 16 23 30
functioncall         : 9 20 34
functiondeclaration  : 12
localdeclaration     : 11
paramlist            : 22
paramseq             : 25 27
program              : 0
varassignmultiple    : 13
vardeclaration       : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . block
    (3) block -> . blocklist
    (4) blocklist -> . command blockterminator blocklist
    (5) blocklist -> . empty
    (8) command -> . ID ASSIGN exp
    (9) command -> . functioncall
    (10) command -> . vardeclaration
    (11) command -> . localdeclaration
    (12) command -> . functiondeclaration
    (13) command -> . varassignmultiple
    (14) command -> . WHILE exp DO block END
    (15) command -> . IF exp THEN block elsestnt END
    (16) command -> . RETURN explist
    (1) empty -> .
    (23) functioncall -> . ID LPAREN explist RPAREN
    (21) vardeclaration -> . VAR ID expassign
    (19) localdeclaration -> . LOCAL ID expassign
    (22) functiondeclaration -> . LOCAL FUNCTION ID LPAREN paramlist RPAREN block END
    (20) varassignmultiple -> . LOCAL ID COMMA ID ASSIGN functioncall

    ID              shift and go to state 6
    WHILE           shift and go to state 12
    IF              shift and go to state 13
    RETURN          shift and go to state 14
    $end            reduce using rule 1 (empty -> .)
    VAR             shift and go to state 15
    LOCAL           shift and go to state 16

    program                        shift and go to state 1
    block                          shift and go to state 2
    blocklist                      shift and go to state 3
    command                        shift and go to state 4
    empty                          shift and go to state 5
    functioncall                   shift and go to state 7
    vardeclaration                 shift and go to state 8
    localdeclaration               shift and go to state 9
    functiondeclaration            shift and go to state 10
    varassignmultiple              shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (2) program -> block .

    $end            reduce using rule 2 (program -> block .)


state 3

    (3) block -> blocklist .

    $end            reduce using rule 3 (block -> blocklist .)
    END             reduce using rule 3 (block -> blocklist .)
    ELSE            reduce using rule 3 (block -> blocklist .)


state 4

    (4) blocklist -> command . blockterminator blocklist
    (6) blockterminator -> . empty
    (7) blockterminator -> . SEMICOLON
    (1) empty -> .

    SEMICOLON       shift and go to state 19
    ID              reduce using rule 1 (empty -> .)
    WHILE           reduce using rule 1 (empty -> .)
    IF              reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    VAR             reduce using rule 1 (empty -> .)
    LOCAL           reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)
    END             reduce using rule 1 (empty -> .)
    ELSE            reduce using rule 1 (empty -> .)

    blockterminator                shift and go to state 17
    empty                          shift and go to state 18

state 5

    (5) blocklist -> empty .

    $end            reduce using rule 5 (blocklist -> empty .)
    END             reduce using rule 5 (blocklist -> empty .)
    ELSE            reduce using rule 5 (blocklist -> empty .)


state 6

    (8) command -> ID . ASSIGN exp
    (23) functioncall -> ID . LPAREN explist RPAREN

    ASSIGN          shift and go to state 20
    LPAREN          shift and go to state 21


state 7

    (9) command -> functioncall .

    SEMICOLON       reduce using rule 9 (command -> functioncall .)
    ID              reduce using rule 9 (command -> functioncall .)
    WHILE           reduce using rule 9 (command -> functioncall .)
    IF              reduce using rule 9 (command -> functioncall .)
    RETURN          reduce using rule 9 (command -> functioncall .)
    VAR             reduce using rule 9 (command -> functioncall .)
    LOCAL           reduce using rule 9 (command -> functioncall .)
    $end            reduce using rule 9 (command -> functioncall .)
    END             reduce using rule 9 (command -> functioncall .)
    ELSE            reduce using rule 9 (command -> functioncall .)


state 8

    (10) command -> vardeclaration .

    SEMICOLON       reduce using rule 10 (command -> vardeclaration .)
    ID              reduce using rule 10 (command -> vardeclaration .)
    WHILE           reduce using rule 10 (command -> vardeclaration .)
    IF              reduce using rule 10 (command -> vardeclaration .)
    RETURN          reduce using rule 10 (command -> vardeclaration .)
    VAR             reduce using rule 10 (command -> vardeclaration .)
    LOCAL           reduce using rule 10 (command -> vardeclaration .)
    $end            reduce using rule 10 (command -> vardeclaration .)
    END             reduce using rule 10 (command -> vardeclaration .)
    ELSE            reduce using rule 10 (command -> vardeclaration .)


state 9

    (11) command -> localdeclaration .

    SEMICOLON       reduce using rule 11 (command -> localdeclaration .)
    ID              reduce using rule 11 (command -> localdeclaration .)
    WHILE           reduce using rule 11 (command -> localdeclaration .)
    IF              reduce using rule 11 (command -> localdeclaration .)
    RETURN          reduce using rule 11 (command -> localdeclaration .)
    VAR             reduce using rule 11 (command -> localdeclaration .)
    LOCAL           reduce using rule 11 (command -> localdeclaration .)
    $end            reduce using rule 11 (command -> localdeclaration .)
    END             reduce using rule 11 (command -> localdeclaration .)
    ELSE            reduce using rule 11 (command -> localdeclaration .)


state 10

    (12) command -> functiondeclaration .

    SEMICOLON       reduce using rule 12 (command -> functiondeclaration .)
    ID              reduce using rule 12 (command -> functiondeclaration .)
    WHILE           reduce using rule 12 (command -> functiondeclaration .)
    IF              reduce using rule 12 (command -> functiondeclaration .)
    RETURN          reduce using rule 12 (command -> functiondeclaration .)
    VAR             reduce using rule 12 (command -> functiondeclaration .)
    LOCAL           reduce using rule 12 (command -> functiondeclaration .)
    $end            reduce using rule 12 (command -> functiondeclaration .)
    END             reduce using rule 12 (command -> functiondeclaration .)
    ELSE            reduce using rule 12 (command -> functiondeclaration .)


state 11

    (13) command -> varassignmultiple .

    SEMICOLON       reduce using rule 13 (command -> varassignmultiple .)
    ID              reduce using rule 13 (command -> varassignmultiple .)
    WHILE           reduce using rule 13 (command -> varassignmultiple .)
    IF              reduce using rule 13 (command -> varassignmultiple .)
    RETURN          reduce using rule 13 (command -> varassignmultiple .)
    VAR             reduce using rule 13 (command -> varassignmultiple .)
    LOCAL           reduce using rule 13 (command -> varassignmultiple .)
    $end            reduce using rule 13 (command -> varassignmultiple .)
    END             reduce using rule 13 (command -> varassignmultiple .)
    ELSE            reduce using rule 13 (command -> varassignmultiple .)


state 12

    (14) command -> WHILE . exp DO block END
    (31) exp -> . NUMBER
    (32) exp -> . ID
    (33) exp -> . STRING
    (34) exp -> . functioncall
    (35) exp -> . exp PLUS exp
    (36) exp -> . exp MINUS exp
    (37) exp -> . exp TIMES exp
    (38) exp -> . exp DIVIDE exp
    (39) exp -> . exp MOD exp
    (40) exp -> . exp AND exp
    (41) exp -> . exp OR exp
    (42) exp -> . exp LESS exp
    (43) exp -> . exp LESSEQUAL exp
    (44) exp -> . exp GREATER exp
    (45) exp -> . exp GREATEREQUAL exp
    (46) exp -> . exp EQUAL exp
    (47) exp -> . exp NOTEQUAL exp
    (48) exp -> . exp CONCAT exp
    (49) exp -> . NOT exp
    (50) exp -> . MINUS exp
    (23) functioncall -> . ID LPAREN explist RPAREN

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    STRING          shift and go to state 25
    NOT             shift and go to state 28
    MINUS           shift and go to state 27

    exp                            shift and go to state 22
    functioncall                   shift and go to state 26

state 13

    (15) command -> IF . exp THEN block elsestnt END
    (31) exp -> . NUMBER
    (32) exp -> . ID
    (33) exp -> . STRING
    (34) exp -> . functioncall
    (35) exp -> . exp PLUS exp
    (36) exp -> . exp MINUS exp
    (37) exp -> . exp TIMES exp
    (38) exp -> . exp DIVIDE exp
    (39) exp -> . exp MOD exp
    (40) exp -> . exp AND exp
    (41) exp -> . exp OR exp
    (42) exp -> . exp LESS exp
    (43) exp -> . exp LESSEQUAL exp
    (44) exp -> . exp GREATER exp
    (45) exp -> . exp GREATEREQUAL exp
    (46) exp -> . exp EQUAL exp
    (47) exp -> . exp NOTEQUAL exp
    (48) exp -> . exp CONCAT exp
    (49) exp -> . NOT exp
    (50) exp -> . MINUS exp
    (23) functioncall -> . ID LPAREN explist RPAREN

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    STRING          shift and go to state 25
    NOT             shift and go to state 28
    MINUS           shift and go to state 27

    exp                            shift and go to state 29
    functioncall                   shift and go to state 26

state 14

    (16) command -> RETURN . explist
    (28) explist -> . empty
    (29) explist -> . exp
    (30) explist -> . exp COMMA explist
    (1) empty -> .
    (31) exp -> . NUMBER
    (32) exp -> . ID
    (33) exp -> . STRING
    (34) exp -> . functioncall
    (35) exp -> . exp PLUS exp
    (36) exp -> . exp MINUS exp
    (37) exp -> . exp TIMES exp
    (38) exp -> . exp DIVIDE exp
    (39) exp -> . exp MOD exp
    (40) exp -> . exp AND exp
    (41) exp -> . exp OR exp
    (42) exp -> . exp LESS exp
    (43) exp -> . exp LESSEQUAL exp
    (44) exp -> . exp GREATER exp
    (45) exp -> . exp GREATEREQUAL exp
    (46) exp -> . exp EQUAL exp
    (47) exp -> . exp NOTEQUAL exp
    (48) exp -> . exp CONCAT exp
    (49) exp -> . NOT exp
    (50) exp -> . MINUS exp
    (23) functioncall -> . ID LPAREN explist RPAREN

  ! shift/reduce conflict for ID resolved as shift
    SEMICOLON       reduce using rule 1 (empty -> .)
    WHILE           reduce using rule 1 (empty -> .)
    IF              reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    VAR             reduce using rule 1 (empty -> .)
    LOCAL           reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)
    END             reduce using rule 1 (empty -> .)
    ELSE            reduce using rule 1 (empty -> .)
    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    STRING          shift and go to state 25
    NOT             shift and go to state 28
    MINUS           shift and go to state 27

  ! ID              [ reduce using rule 1 (empty -> .) ]

    explist                        shift and go to state 30
    empty                          shift and go to state 31
    exp                            shift and go to state 32
    functioncall                   shift and go to state 26

state 15

    (21) vardeclaration -> VAR . ID expassign

    ID              shift and go to state 33


state 16

    (19) localdeclaration -> LOCAL . ID expassign
    (22) functiondeclaration -> LOCAL . FUNCTION ID LPAREN paramlist RPAREN block END
    (20) varassignmultiple -> LOCAL . ID COMMA ID ASSIGN functioncall

    ID              shift and go to state 34
    FUNCTION        shift and go to state 35


state 17

    (4) blocklist -> command blockterminator . blocklist
    (4) blocklist -> . command blockterminator blocklist
    (5) blocklist -> . empty
    (8) command -> . ID ASSIGN exp
    (9) command -> . functioncall
    (10) command -> . vardeclaration
    (11) command -> . localdeclaration
    (12) command -> . functiondeclaration
    (13) command -> . varassignmultiple
    (14) command -> . WHILE exp DO block END
    (15) command -> . IF exp THEN block elsestnt END
    (16) command -> . RETURN explist
    (1) empty -> .
    (23) functioncall -> . ID LPAREN explist RPAREN
    (21) vardeclaration -> . VAR ID expassign
    (19) localdeclaration -> . LOCAL ID expassign
    (22) functiondeclaration -> . LOCAL FUNCTION ID LPAREN paramlist RPAREN block END
    (20) varassignmultiple -> . LOCAL ID COMMA ID ASSIGN functioncall

    ID              shift and go to state 6
    WHILE           shift and go to state 12
    IF              shift and go to state 13
    RETURN          shift and go to state 14
    $end            reduce using rule 1 (empty -> .)
    END             reduce using rule 1 (empty -> .)
    ELSE            reduce using rule 1 (empty -> .)
    VAR             shift and go to state 15
    LOCAL           shift and go to state 16

    command                        shift and go to state 4
    blocklist                      shift and go to state 36
    empty                          shift and go to state 5
    functioncall                   shift and go to state 7
    vardeclaration                 shift and go to state 8
    localdeclaration               shift and go to state 9
    functiondeclaration            shift and go to state 10
    varassignmultiple              shift and go to state 11

state 18

    (6) blockterminator -> empty .

    ID              reduce using rule 6 (blockterminator -> empty .)
    WHILE           reduce using rule 6 (blockterminator -> empty .)
    IF              reduce using rule 6 (blockterminator -> empty .)
    RETURN          reduce using rule 6 (blockterminator -> empty .)
    VAR             reduce using rule 6 (blockterminator -> empty .)
    LOCAL           reduce using rule 6 (blockterminator -> empty .)
    $end            reduce using rule 6 (blockterminator -> empty .)
    END             reduce using rule 6 (blockterminator -> empty .)
    ELSE            reduce using rule 6 (blockterminator -> empty .)


state 19

    (7) blockterminator -> SEMICOLON .

    ID              reduce using rule 7 (blockterminator -> SEMICOLON .)
    WHILE           reduce using rule 7 (blockterminator -> SEMICOLON .)
    IF              reduce using rule 7 (blockterminator -> SEMICOLON .)
    RETURN          reduce using rule 7 (blockterminator -> SEMICOLON .)
    VAR             reduce using rule 7 (blockterminator -> SEMICOLON .)
    LOCAL           reduce using rule 7 (blockterminator -> SEMICOLON .)
    $end            reduce using rule 7 (blockterminator -> SEMICOLON .)
    END             reduce using rule 7 (blockterminator -> SEMICOLON .)
    ELSE            reduce using rule 7 (blockterminator -> SEMICOLON .)


state 20

    (8) command -> ID ASSIGN . exp
    (31) exp -> . NUMBER
    (32) exp -> . ID
    (33) exp -> . STRING
    (34) exp -> . functioncall
    (35) exp -> . exp PLUS exp
    (36) exp -> . exp MINUS exp
    (37) exp -> . exp TIMES exp
    (38) exp -> . exp DIVIDE exp
    (39) exp -> . exp MOD exp
    (40) exp -> . exp AND exp
    (41) exp -> . exp OR exp
    (42) exp -> . exp LESS exp
    (43) exp -> . exp LESSEQUAL exp
    (44) exp -> . exp GREATER exp
    (45) exp -> . exp GREATEREQUAL exp
    (46) exp -> . exp EQUAL exp
    (47) exp -> . exp NOTEQUAL exp
    (48) exp -> . exp CONCAT exp
    (49) exp -> . NOT exp
    (50) exp -> . MINUS exp
    (23) functioncall -> . ID LPAREN explist RPAREN

    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    STRING          shift and go to state 25
    NOT             shift and go to state 28
    MINUS           shift and go to state 27

    exp                            shift and go to state 37
    functioncall                   shift and go to state 26

state 21

    (23) functioncall -> ID LPAREN . explist RPAREN
    (28) explist -> . empty
    (29) explist -> . exp
    (30) explist -> . exp COMMA explist
    (1) empty -> .
    (31) exp -> . NUMBER
    (32) exp -> . ID
    (33) exp -> . STRING
    (34) exp -> . functioncall
    (35) exp -> . exp PLUS exp
    (36) exp -> . exp MINUS exp
    (37) exp -> . exp TIMES exp
    (38) exp -> . exp DIVIDE exp
    (39) exp -> . exp MOD exp
    (40) exp -> . exp AND exp
    (41) exp -> . exp OR exp
    (42) exp -> . exp LESS exp
    (43) exp -> . exp LESSEQUAL exp
    (44) exp -> . exp GREATER exp
    (45) exp -> . exp GREATEREQUAL exp
    (46) exp -> . exp EQUAL exp
    (47) exp -> . exp NOTEQUAL exp
    (48) exp -> . exp CONCAT exp
    (49) exp -> . NOT exp
    (50) exp -> . MINUS exp
    (23) functioncall -> . ID LPAREN explist RPAREN

    RPAREN          reduce using rule 1 (empty -> .)
    NUMBER          shift and go to state 23
    ID              shift and go to state 24
    STRING          shift and go to state 25
    NOT             shift and go to state 28
    MINUS           shift and go to state 27

    explist                        shift and go to state 38
    empty                          shift and go to state 31
    exp                            shift and go to state 32
    functioncall                   shift and go to state 26

state 22

    (14) command -> WHILE exp . DO block END
    (35) exp -> exp . PLUS exp
    (36) exp -> exp . MINUS exp
    (37) exp -> exp . TIMES exp
    (38) exp -> exp . DIVIDE exp
    (39) exp -> exp . MOD exp
    (40) exp -> exp . AND exp
    (41) exp -> exp . OR exp
    (42) exp -> exp . LESS exp
    (43) exp -> exp . LESSEQUAL exp
    (44) exp -> exp . GREATER exp
    (45) exp -> exp . GREATEREQUAL exp
    (46) exp -> exp . EQUAL exp
    (47) exp -> exp . NOTEQUAL exp
    (48) exp -> exp . CONCAT exp

    DO              shift and go to state 39
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43
    MOD             shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46
    LESS            shift and go to state 47
    LESSEQUAL       shift and go to state 48
    GREATER         shift and go to state 49
    GREATEREQUAL    shift and go to state 50
    EQUAL           shift and go to state 51
    NOTEQUAL        shift and go to state 52
    CONCAT          shift and go to state 53


state 23

    (31) exp -> NUMBER .

    DO              reduce using rule 31 (exp -> NUMBER .)
    PLUS            reduce using rule 31 (exp -> NUMBER .)
    MINUS           reduce using rule 31 (exp -> NUMBER .)
    TIMES           reduce using rule 31 (exp -> NUMBER .)
    DIVIDE          reduce using rule 31 (exp -> NUMBER .)
    MOD             reduce using rule 31 (exp -> NUMBER .)
    AND             reduce using rule 31 (exp -> NUMBER .)
    OR              reduce using rule 31 (exp -> NUMBER .)
    LESS            reduce using rule 31 (exp -> NUMBER .)
    LESSEQUAL       reduce using rule 31 (exp -> NUMBER .)
    GREATER         reduce using rule 31 (exp -> NUMBER .)
    GREATEREQUAL    reduce using rule 31 (exp -> NUMBER .)
    EQUAL           reduce using rule 31 (exp -> NUMBER .)
    NOTEQUAL        reduce using rule 31 (exp -> NUMBER .)
    CONCAT          reduce using rule 31 (exp -> NUMBER .)
    THEN            reduce using rule 31 (exp -> NUMBER .)
    COMMA           reduce using rule 31 (exp -> NUMBER .)
    SEMICOLON       reduce using rule 31 (exp -> NUMBER .)
    ID              reduce using rule 31 (exp -> NUMBER .)
    WHILE           reduce using rule 31 (exp -> NUMBER .)
    IF              reduce using rule 31 (exp -> NUMBER .)
    RETURN          reduce using rule 31 (exp -> NUMBER .)
    VAR             reduce using rule 31 (exp -> NUMBER .)
    LOCAL           reduce using rule 31 (exp -> NUMBER .)
    $end            reduce using rule 31 (exp -> NUMBER .)
    END             reduce using rule 31 (exp -> NUMBER .)
    ELSE            reduce using rule 31 (exp -> NUMBER .)
    RPAREN          reduce using rule 31 (exp -> NUMBER .)


state 24

    (32) exp -> ID .
    (23) functioncall -> ID . LPAREN explist RPAREN

    DO              reduce using rule 32 (exp -> ID .)
    PLUS            reduce using rule 32 (exp -> ID .)
    MINUS           reduce using rule 32 (exp -> ID .)
    TIMES           reduce using rule 32 (exp -> ID .)
    DIVIDE          reduce using rule 32 (exp -> ID .)
    MOD             reduce using rule 32 (exp -> ID .)
    AND             reduce using rule 32 (exp -> ID .)
    OR              reduce using rule 32 (exp -> ID .)
    LESS            reduce using rule 32 (exp -> ID .)
    LESSEQUAL       reduce using rule 32 (exp -> ID .)
    GREATER         reduce using rule 32 (exp -> ID .)
    GREATEREQUAL    reduce using rule 32 (exp -> ID .)
    EQUAL           reduce using rule 32 (exp -> ID .)
    NOTEQUAL        reduce using rule 32 (exp -> ID .)
    CONCAT          reduce using rule 32 (exp -> ID .)
    THEN            reduce using rule 32 (exp -> ID .)
    COMMA           reduce using rule 32 (exp -> ID .)
    SEMICOLON       reduce using rule 32 (exp -> ID .)
    ID              reduce using rule 32 (exp -> ID .)
    WHILE           reduce using rule 32 (exp -> ID .)
    IF              reduce using rule 32 (exp -> ID .)
    RETURN          reduce using rule 32 (exp -> ID .)
    VAR             reduce using rule 32 (exp -> ID .)
    LOCAL           reduce using rule 32 (exp -> ID .)
    $end            reduce using rule 32 (exp -> ID .)
    END             reduce using rule 32 (exp -> ID .)
    ELSE            reduce using rule 32 (exp -> ID .)
    RPAREN          reduce using rule 32 (exp -> ID .)
    LPAREN          shift and go to state 21


state 25

    (33) exp -> STRING .

    DO              reduce using rule 33 (exp -> STRING .)
    PLUS            reduce using rule 33 (exp -> STRING .)
    MINUS           reduce using rule 33 (exp -> STRING .)
    TIMES           reduce using rule 33 (exp -> STRING .)
    DIVIDE          reduce using rule 33 (exp -> STRING .)
    MOD             reduce using rule 33 (exp -> STRING .)
    AND             reduce using rule 33 (exp -> STRING .)
    OR              reduce using rule 33 (exp -> STRING .)
    LESS            reduce using rule 33 (exp -> STRING .)
    LESSEQUAL       reduce using rule 33 (exp -> STRING .)
    GREATER         reduce using rule 33 (exp -> STRING .)
    GREATEREQUAL    reduce using rule 33 (exp -> STRING .)
    EQUAL           reduce using rule 33 (exp -> STRING .)
    NOTEQUAL        reduce using rule 33 (exp -> STRING .)
    CONCAT          reduce using rule 33 (exp -> STRING .)
    THEN            reduce using rule 33 (exp -> STRING .)
    COMMA           reduce using rule 33 (exp -> STRING .)
    SEMICOLON       reduce using rule 33 (exp -> STRING .)
    ID              reduce using rule 33 (exp -> STRING .)
    WHILE           reduce using rule 33 (exp -> STRING .)
    IF              reduce using rule 33 (exp -> STRING .)
    RETURN          reduce using rule 33 (exp -> STRING .)
    VAR             reduce using rule 33 (exp -> STRING .)
    LOCAL           reduce using rule 33 (exp -> STRING .)
    $end            reduce using rule 33 (exp -> STRING .)
    END             reduce using rule 33 (exp -> STRING .)
    ELSE            reduce using rule 33 (exp -> STRING .)
    RPAREN          reduce using rule 33 (exp -> STRING .)


state 26

    (34) exp -> functioncall .
